fix: vision container overflow

--- a/sass/home/vision/main.scss
+++ b/sass/home/vision/main.scss
@@ -4,6 +4,7 @@
 	display: flex;
 	align-items: center;
 	height: calc(100vh - 380px);
+	min-height: 400px;
 	justify-content: space-between;
 }
 
